; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v9_0.c_gfx_v9_0_rlc_start.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v9_0.c_gfx_v9_0_rlc_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@GC = common dso_local global i32 0, align 4
@RLC_CNTL = common dso_local global i32 0, align 4
@RLC_ENABLE_F32 = common dso_local global i32 0, align 4
@AMD_IS_APU = common dso_local global i32 0, align 4
@mmRLC_GPM_GENERAL_12 = common dso_local global i32 0, align 4
@mmRLC_GPM_GENERAL_6 = common dso_local global i32 0, align 4
@mmRLC_GPM_TIMER_INT_3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amdgpu_device*)* @gfx_v9_0_rlc_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfx_v9_0_rlc_start(%struct.amdgpu_device* %0) #0 {
  %2 = alloca %struct.amdgpu_device*, align 8
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %2, align 8
  %3 = load i32, i32* @GC, align 4
  %4 = load i32, i32* @RLC_CNTL, align 4
  %5 = load i32, i32* @RLC_ENABLE_F32, align 4
  %6 = call i32 @WREG32_FIELD15(i32 %3, i32 0, i32 %4, i32 %5, i32 1)
  %7 = call i32 @udelay(i32 50)
  %8 = load %struct.amdgpu_device*, %struct.amdgpu_device** %2, align 8
  %9 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @AMD_IS_APU, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %1
  %15 = load %struct.amdgpu_device*, %struct.amdgpu_device** %2, align 8
  %16 = call i32 @gfx_v9_0_enable_gui_idle_interrupt(%struct.amdgpu_device* %15, i32 1)
  %17 = call i32 @udelay(i32 50)
  br label %18

18:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @WREG32_FIELD15(i32, i32, i32, i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @gfx_v9_0_enable_gui_idle_interrupt(%struct.amdgpu_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
